Fixed flexbox wrap to make page responsive

--- a/style/style.css
+++ b/style/style.css
@@ -38,8 +38,8 @@ header h3 {
 
 header .navigation-bar {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
-    height: 64px;
     justify-content: flex-start;
     align-items: center;
 }
@@ -50,7 +50,7 @@ header .navigation-bar a {
     line-height: 32px;
     color: #50514F;
     padding: 8px 12px;
-    margin: 0 16px;
+    margin: 8px 16px;
     background-color: #FFED65;
 }
 
